# textooze

./: LICENSE  README.md  pyproject.toml
tests/: test_back_translation.py  test_contextual_imputer.py  test_contextual_replacer.py  test_paraphraser.py
tests/data/: en_short_texts.json
textooze/augmenters/: __init__.py  back_translation.py  contextual_imputer.py  contextual_replacer.py  external_methods.py  paraphraser.py
